--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^2.1.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
