--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "SMP Turbo",
   "license": "MIT",
   "scripts": {
+    "web": "node server/server.js",
     "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack --env production",
@@ -22,6 +23,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
+    "express": "^4.17.1",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^2.1.0",
     "moment": "^2.29.1",
