--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "author": "SMP Turbo",
   "license": "MIT",
   "scripts": {
-    "web": "node server/server.js",
+    "start": "node server/server.js",
     "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack --env production",
     "dev-server": "webpack serve",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "@babel/cli": "^7.14.5",
