--- a/package.json
+++ b/package.json
@@ -21,11 +21,7 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
     "express": "^4.17.1",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^2.1.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
@@ -37,7 +33,6 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
@@ -47,6 +42,12 @@
     "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
-    "jest": "^27.0.6"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "jest": "^27.0.6",
+    "live-server": "^1.2.1",
+    "react-test-renderer": "^17.0.2"
+
   }
 }
