--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "style-loader": "^3.0.0",
     "uuid": "^8.3.2",
     "webpack": "^5.43.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
@@ -47,7 +46,7 @@
     "enzyme-to-json": "^3.6.2",
     "jest": "^27.0.6",
     "live-server": "^1.2.1",
-    "react-test-renderer": "^17.0.2"
-
+    "react-test-renderer": "^17.0.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
