--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,8 @@
 {
-    "setupFilesAfterEnv": [
+    "snapshotSerializers": [
+        "enzyme-to-json/serializer"
+    ],
+    "setupFiles": [
         "raf/polyfill",
         "<rootDir>/src/tests/setupTests.js"
     ]
