--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "4.2.0",
     "mini-css-extract-plugin": "^2.1.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
@@ -35,6 +38,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
     "uuid": "^8.3.2",
