--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "4.2.0",
+    "history": "^5.0.1",
     "mini-css-extract-plugin": "^2.1.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
